# IFT2035_TP1_projetC_compilateur

./: CMakeLists.txt  README.md  petit-comp  petit-comp 2.c  petit-comp.c  test.c
tp1/: comp  debug.h  petit-comp.c  test.c
tp1/comp.dSYM/Contents/Resources/DWARF/: comp
